kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carpooling
  labels:
    name: carpooling
    environment: production
